JEDIT VERSION HISTORY

* Version 2.2pre8

+ Enhancements

- Buffers are only loaded when necessary. This improves jEdit's
  perceived speed when opening lots of files, etc
- Possible workaround for buggy focus handling

+ Bug Fixes

- Fixed minor bug in style option pane (since 1.7pre4)
- Perl mode had problems with << EOF statements (Andre Kaplan) (since 1.7pre3)
- Action loading code should now work if jEdit was loaded with a non-system
  class loader(since 2.2pre7)
- Reload command didn't work (since 2.2pre7)
- jEdit now ignores empty command line parameters - so the windows batch
  file should work properly now (since 2.2pre7)

* Version 2.2pre7

+ New Features

- Scroll bar position is now saved while switching buffers
- You can now sort by label or shortcut in the key binding editor
- Updated expand-abbrev (Valery Kondakoff)
- C+HOME/C+END go to beginning and end of document
- New BufferUpdate.LOADING message fired on buffer load and reload
  (signals that buffer-local properties have changed)

+ Enhancements

- Enhanced horizontal scrolling
- Built-in actions are now dynamically loaded as they are executed, this
  improves startup time and memory consumption somewhat
- The file loading code now bypasses the Swing document interface, so it
  should run a little faster
- jEdit no longer adds two components to the EditBus, this should make
  things a tiny bit faster
- Faster jEdit.closeAllBuffers() method, jEdit shouldn't take as long to exit
  and close all buffers
- New concept of 'temporary buffers' speeds up recursive directory search
  dramatically (the time to search in the org.gjt.sp.jedit.syntax package,
  for example, has been cut from 20 seconds to 5!!!)
- Search and replace only shows the 'keep searching' dialog once
- New 'New View' icon
- Key binding changes:
  C+d C+d: C+d
  C+d C+e: C+e C+d
  C+d C+s: CS+BACK_SPACE
  C+d C+f: CS+DELETE
  C+e C+[: CA+[
  C+e C+]: CA+]
  C+m: C+e C+m
  C+e C+m XXX: C+m XXX
  F2: F3
  F3: S+F3